# Sable2

./: .gitignore  CMakeLists.txt
lib/assimp-5.0.1/: ALL_BUILD.vcxproj  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj.filters  assimp.pc  assimpTargets-debug.cmake  assimpTargets-release.cmake  revision.h
lib/assimp-5.0.1/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters
lib/assimp-5.0.1/contrib/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/assimp-5.0.1/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  unit.vcxproj  unit.vcxproj.filters
lib/glfw-3.3.4/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw-3.3.4/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  sable.cpp
src/core/: CMakeLists.txt  archetype.cpp  archetype.h  archetype_manager.cpp  archetype_manager.h  ecs_manager.cpp  ecs_manager.h  entity.h  entity_manager.cpp  entity_manager.h  system.cpp  system.h  types.h
src/core/assetloader/: CMakeLists.txt  asset_loader_manager.cpp  asset_loader_manager.h
src/core/attributes/: CMakeLists.txt  camera.h  follow.h  hierarchy.h  static_mesh.h  transform.h
src/core/ecs/: CMakeLists.txt  archetype.cpp  (+13 more)
src/projects/: CMakeLists.txt
src/shaders/: defaultfragmentshader.glsl  defaultvertexshader.glsl
(+58 files in other folders)
